// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hyphenateDictionary renders 0 1`] = `
Array [
  .c0 {
  -webkit-hyphenate-dictionary: 0;
  -moz-hyphenate-dictionary: 0;
  -ms-hyphenate-dictionary: 0;
  hyphenate-dictionary: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-dictionary: 0;
  -moz-hyphenate-dictionary: 0;
  -ms-hyphenate-dictionary: 0;
  hyphenate-dictionary: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-dictionary: 0;
  -moz-hyphenate-dictionary: 0;
  -ms-hyphenate-dictionary: 0;
  hyphenate-dictionary: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-dictionary: 0;
  -moz-hyphenate-dictionary: 0;
  -ms-hyphenate-dictionary: 0;
  hyphenate-dictionary: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateDictionary renders function 1`] = `
Array [
  .c0 {
  -webkit-hyphenate-dictionary: hasnot;
  -moz-hyphenate-dictionary: hasnot;
  -ms-hyphenate-dictionary: hasnot;
  hyphenate-dictionary: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-dictionary: has;
  -moz-hyphenate-dictionary: has;
  -ms-hyphenate-dictionary: has;
  hyphenate-dictionary: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-dictionary: hasnot;
  -moz-hyphenate-dictionary: hasnot;
  -ms-hyphenate-dictionary: hasnot;
  hyphenate-dictionary: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-dictionary: has;
  -moz-hyphenate-dictionary: has;
  -ms-hyphenate-dictionary: has;
  hyphenate-dictionary: has;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateDictionary renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-hyphenate-dictionary: invalid.path.1;
  -moz-hyphenate-dictionary: invalid.path.1;
  -ms-hyphenate-dictionary: invalid.path.1;
  hyphenate-dictionary: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-dictionary: invalid.path.1;
  -moz-hyphenate-dictionary: invalid.path.1;
  -ms-hyphenate-dictionary: invalid.path.1;
  hyphenate-dictionary: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-dictionary: invalid.path.1;
  -moz-hyphenate-dictionary: invalid.path.1;
  -ms-hyphenate-dictionary: invalid.path.1;
  hyphenate-dictionary: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-dictionary: invalid.path.1;
  -moz-hyphenate-dictionary: invalid.path.1;
  -ms-hyphenate-dictionary: invalid.path.1;
  hyphenate-dictionary: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateDictionary renders negative number 1`] = `
Array [
  .c0 {
  -webkit-hyphenate-dictionary: -54881;
  -moz-hyphenate-dictionary: -54881;
  -ms-hyphenate-dictionary: -54881;
  hyphenate-dictionary: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-dictionary: -54881;
  -moz-hyphenate-dictionary: -54881;
  -ms-hyphenate-dictionary: -54881;
  hyphenate-dictionary: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-dictionary: -42365;
  -moz-hyphenate-dictionary: -42365;
  -ms-hyphenate-dictionary: -42365;
  hyphenate-dictionary: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-dictionary: -42365;
  -moz-hyphenate-dictionary: -42365;
  -ms-hyphenate-dictionary: -42365;
  hyphenate-dictionary: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateDictionary renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-dictionary: July;
    -moz-hyphenate-dictionary: July;
    -ms-hyphenate-dictionary: July;
    hyphenate-dictionary: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-dictionary: August;
    -moz-hyphenate-dictionary: August;
    -ms-hyphenate-dictionary: August;
    hyphenate-dictionary: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-dictionary: September;
    -moz-hyphenate-dictionary: September;
    -ms-hyphenate-dictionary: September;
    hyphenate-dictionary: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphenate-dictionary: November;
    -moz-hyphenate-dictionary: November;
    -ms-hyphenate-dictionary: November;
    hyphenate-dictionary: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-dictionary: July;
    -moz-hyphenate-dictionary: July;
    -ms-hyphenate-dictionary: July;
    hyphenate-dictionary: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-dictionary: August;
    -moz-hyphenate-dictionary: August;
    -ms-hyphenate-dictionary: August;
    hyphenate-dictionary: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-dictionary: September;
    -moz-hyphenate-dictionary: September;
    -ms-hyphenate-dictionary: September;
    hyphenate-dictionary: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphenate-dictionary: November;
    -moz-hyphenate-dictionary: November;
    -ms-hyphenate-dictionary: November;
    hyphenate-dictionary: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-dictionary: May;
    -moz-hyphenate-dictionary: May;
    -ms-hyphenate-dictionary: May;
    hyphenate-dictionary: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-dictionary: June;
    -moz-hyphenate-dictionary: June;
    -ms-hyphenate-dictionary: June;
    hyphenate-dictionary: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-dictionary: April;
    -moz-hyphenate-dictionary: April;
    -ms-hyphenate-dictionary: April;
    hyphenate-dictionary: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphenate-dictionary: November;
    -moz-hyphenate-dictionary: November;
    -ms-hyphenate-dictionary: November;
    hyphenate-dictionary: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-dictionary: May;
    -moz-hyphenate-dictionary: May;
    -ms-hyphenate-dictionary: May;
    hyphenate-dictionary: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-dictionary: June;
    -moz-hyphenate-dictionary: June;
    -ms-hyphenate-dictionary: June;
    hyphenate-dictionary: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-dictionary: April;
    -moz-hyphenate-dictionary: April;
    -ms-hyphenate-dictionary: April;
    hyphenate-dictionary: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphenate-dictionary: November;
    -moz-hyphenate-dictionary: November;
    -ms-hyphenate-dictionary: November;
    hyphenate-dictionary: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateDictionary renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-hyphenate-dictionary: July;
    -moz-hyphenate-dictionary: July;
    -ms-hyphenate-dictionary: July;
    hyphenate-dictionary: July;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-dictionary: August;
    -moz-hyphenate-dictionary: August;
    -ms-hyphenate-dictionary: August;
    hyphenate-dictionary: August;
  }
}

@media January {
  .c0 {
    -webkit-hyphenate-dictionary: September;
    -moz-hyphenate-dictionary: September;
    -ms-hyphenate-dictionary: September;
    hyphenate-dictionary: September;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-dictionary: November;
    -moz-hyphenate-dictionary: November;
    -ms-hyphenate-dictionary: November;
    hyphenate-dictionary: November;
  }
}

@media June {
  .c0 {
    -webkit-hyphenate-dictionary: August;
    -moz-hyphenate-dictionary: August;
    -ms-hyphenate-dictionary: August;
    hyphenate-dictionary: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-hyphenate-dictionary: July;
    -moz-hyphenate-dictionary: July;
    -ms-hyphenate-dictionary: July;
    hyphenate-dictionary: July;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-dictionary: August;
    -moz-hyphenate-dictionary: August;
    -ms-hyphenate-dictionary: August;
    hyphenate-dictionary: August;
  }
}

@media January {
  .c0 {
    -webkit-hyphenate-dictionary: September;
    -moz-hyphenate-dictionary: September;
    -ms-hyphenate-dictionary: September;
    hyphenate-dictionary: September;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-dictionary: November;
    -moz-hyphenate-dictionary: November;
    -ms-hyphenate-dictionary: November;
    hyphenate-dictionary: November;
  }
}

@media June {
  .c0 {
    -webkit-hyphenate-dictionary: August;
    -moz-hyphenate-dictionary: August;
    -ms-hyphenate-dictionary: August;
    hyphenate-dictionary: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-hyphenate-dictionary: January;
    -moz-hyphenate-dictionary: January;
    -ms-hyphenate-dictionary: January;
    hyphenate-dictionary: January;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-dictionary: December;
    -moz-hyphenate-dictionary: December;
    -ms-hyphenate-dictionary: December;
    hyphenate-dictionary: December;
  }
}

@media January {
  .c0 {
    -webkit-hyphenate-dictionary: April;
    -moz-hyphenate-dictionary: April;
    -ms-hyphenate-dictionary: April;
    hyphenate-dictionary: April;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-dictionary: May;
    -moz-hyphenate-dictionary: May;
    -ms-hyphenate-dictionary: May;
    hyphenate-dictionary: May;
  }
}

@media June {
  .c0 {
    -webkit-hyphenate-dictionary: June;
    -moz-hyphenate-dictionary: June;
    -ms-hyphenate-dictionary: June;
    hyphenate-dictionary: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-hyphenate-dictionary: January;
    -moz-hyphenate-dictionary: January;
    -ms-hyphenate-dictionary: January;
    hyphenate-dictionary: January;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-dictionary: December;
    -moz-hyphenate-dictionary: December;
    -ms-hyphenate-dictionary: December;
    hyphenate-dictionary: December;
  }
}

@media January {
  .c0 {
    -webkit-hyphenate-dictionary: April;
    -moz-hyphenate-dictionary: April;
    -ms-hyphenate-dictionary: April;
    hyphenate-dictionary: April;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-dictionary: May;
    -moz-hyphenate-dictionary: May;
    -ms-hyphenate-dictionary: May;
    hyphenate-dictionary: May;
  }
}

@media June {
  .c0 {
    -webkit-hyphenate-dictionary: June;
    -moz-hyphenate-dictionary: June;
    -ms-hyphenate-dictionary: June;
    hyphenate-dictionary: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateDictionary renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-hyphenate-dictionary: 54881;
  -moz-hyphenate-dictionary: 54881;
  -ms-hyphenate-dictionary: 54881;
  hyphenate-dictionary: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-dictionary: 54881;
  -moz-hyphenate-dictionary: 54881;
  -ms-hyphenate-dictionary: 54881;
  hyphenate-dictionary: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-dictionary: 42365;
  -moz-hyphenate-dictionary: 42365;
  -ms-hyphenate-dictionary: 42365;
  hyphenate-dictionary: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-dictionary: 42365;
  -moz-hyphenate-dictionary: 42365;
  -ms-hyphenate-dictionary: 42365;
  hyphenate-dictionary: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateDictionary renders string 1`] = `
Array [
  .c0 {
  -webkit-hyphenate-dictionary: July;
  -moz-hyphenate-dictionary: July;
  -ms-hyphenate-dictionary: July;
  hyphenate-dictionary: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-dictionary: July;
  -moz-hyphenate-dictionary: July;
  -ms-hyphenate-dictionary: July;
  hyphenate-dictionary: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-dictionary: June;
  -moz-hyphenate-dictionary: June;
  -ms-hyphenate-dictionary: June;
  hyphenate-dictionary: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-dictionary: June;
  -moz-hyphenate-dictionary: June;
  -ms-hyphenate-dictionary: June;
  hyphenate-dictionary: June;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateDictionary renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-hyphenate-dictionary: DarkSlateBlue;
  -moz-hyphenate-dictionary: DarkSlateBlue;
  -ms-hyphenate-dictionary: DarkSlateBlue;
  hyphenate-dictionary: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-dictionary: DarkSlateBlue;
  -moz-hyphenate-dictionary: DarkSlateBlue;
  -ms-hyphenate-dictionary: DarkSlateBlue;
  hyphenate-dictionary: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-dictionary: DarkSlateBlue;
  -moz-hyphenate-dictionary: DarkSlateBlue;
  -ms-hyphenate-dictionary: DarkSlateBlue;
  hyphenate-dictionary: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-dictionary: DarkSlateBlue;
  -moz-hyphenate-dictionary: DarkSlateBlue;
  -ms-hyphenate-dictionary: DarkSlateBlue;
  hyphenate-dictionary: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
